--- a/src/static/style.css
+++ b/src/static/style.css
@@ -42,6 +42,8 @@ table {
 	border-spacing: 0;
 }
 
+
+
 .navbar {
   background-color: #ADD8E6;
   padding: 10px 10px;
@@ -49,9 +51,27 @@ table {
   justify-content: space-between;
 }
 
+.avatar {
+  border-radius: 50%;
+}
+
 .content {
   max-width: 1024px;
   margin: 0 auto;
+}
+
+.posts-list > .post {
+	margin-top: 20px;
+}
+
+.post-author {
+  display: flex;
+  align-items: center;
+}
+
+.post-author-username {
+	padding-left: 5px;
+	font-size: 12pt;
 }
 
 .post .post-content {
@@ -62,4 +82,29 @@ table {
 
 .grayed {
   color: rgba(0, 0, 0, 0.8);
+}
+
+.profile-banner {
+	position: relative;
+	display: flex;
+	align-items: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 20px;
+}
+
+.profile-banner::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.profile-banner-name {
+	font-size: 20pt;
+	font-weight: 700;
+	margin-left: 50px;
 }
