--- a/src/static/style.css
+++ b/src/static/style.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Lato', sans-serif;
 }
 ol, ul {
 	list-style: none;
@@ -42,13 +43,23 @@ table {
 	border-spacing: 0;
 }
 
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
 .navbar {
   background-color: #ADD8E6;
   padding: 10px 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-actions {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-actions a {
+  margin-left: 10px;
 }
 
 .avatar {
@@ -57,7 +68,7 @@ table {
 
 .content {
   max-width: 1024px;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
 .posts-list > .post {
@@ -124,4 +135,15 @@ table {
 	font-weight: 700;
 	font-size: 20pt;
 	margin-bottom: 5px;
+}
+
+.friends-list {
+	display: flex;
+}
+
+.friends-list .friend {
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
