--- a/src/static/style.css
+++ b/src/static/style.css
@@ -45,6 +45,14 @@ table {
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
+:root {
+	--app-color: #1d9bf0;
+}
+
+body {
+	background-color: rgb(243, 244, 246);
+}
+
 .navbar {
   background-color: #ADD8E6;
   padding: 10px 10px;
@@ -146,4 +154,64 @@ table {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+body.center {
+	height: 100vh;
+}
+
+.center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.login-form {
+	width: 450px;
+	display: flex;
+	flex-direction: column;
+	background-color: #fff;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+}
+
+.form-logo {
+	height: 100px;
+	object-fit: contain;
+	margin-bottom: 20px;
+} 
+
+.input {
+	margin-bottom: 10px;
+	box-sizing:border-box;
+	width: 100%;
+	padding: 7px 10px;
+	font-size: 12pt;
+	border-radius: 5px;
+	border: 1px rgba(0, 0, 0, 0.3) solid;
+}
+
+.login-form > span {
+	margin-top: 10px;
+	color: rgba(0, 0, 0, 0.7);
+	font-size: 10pt;
+}
+
+.login-form > input:last-of-type {
+	margin-bottom: 0;
+}
+
+.button {
+	padding: 10px;
+	border-radius: 5px;
+	cursor: pointer;
+	font-size: 11pt;
+	letter-spacing: 1px;
+}
+
+.button-primary {
+	background-color: var(--app-color);
+	border: none;
+	color: #fff;
 }
